--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ h1{
     line-height: 1.5;
     
 }
+
 a{
     text-decoration: none;
 }
@@ -41,6 +42,9 @@ p{
 .title-services{
     text-align: center;
     padding-bottom: 28px;
+}
+#detatils{
+    color: #fff;
 }
 
 /* navigation bar */
