--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,20 @@ p{
 #detatils{
     color: #fff;
 }
+.bi-facebook{
+    color: blue;
+    font-size: 50px;
+    margin-top: 5px;
+}
+.bi-instagram{
+    color: rgb(182, 17, 107);
+    font-size: 50px;
+    margin-top: 5px;
+}
+.bi-telephone-inbound{
+    color: rgb(37, 114, 37);
+    margin-top: 5px;
+}
 
 /* navigation bar */
 
