--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,12 @@ p{
     color: rgb(37, 114, 37);
     margin-top: 5px;
 }
+.d-block{
+    width: 100%;
+    height: 700px;
+
+}
+
 
 /* navigation bar */
 
